--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ pretrained_weights
 animations
 # Byte-compiled / optimized / DLL files
 __pycache__/
+__pycache__
 *.py[cod]
 *$py.class
+secrets/
 
 # C extensions
 *.so
